--- a/program.ipynb
+++ b/program.ipynb
@@ -103,13 +103,13 @@
     "    cos[l*len(X):l*len(X)+  len(X)] =  scipy.sparse.linalg.spsolve(A, R_init)\n",
     "    #print(cos[l*len(X):l*len(X)+ len(X)][0-2])\n",
     "    w = 1\n",
-    "    R_init[0] = 0 #r_matrix(cos[l*len(X):l*len(X)+ len(X)][1],cos[l*len(X):l*len(X)+  len(X)][2],0,tau,stepik,X[1])\n",
+    "    R_init[0] = 0\n",
     "    for j in range(1,len(X)-1):\n",
     "        cos[l*len(X):l*len(X)+  len(X)][0] = 0\n",
     "        cos[l*len(X):l*len(X)+  len(X)][-1] = 0            \n",
     "        R_init[w] = r_matrix(cos[l*len(X):l*len(X)+ len(X)][j],cos[l*len(X):l*len(X)+  len(X)][j+1],cos[l*len(X):l*len(X)+  len(X)][j-1],tau,stepik,X[j])\n",
     "        w+=1\n",
-    "    R_init[-1] = 0#r_matrix(cos[l*len(X):l*len(X)+ len(X)][-2],0,cos[l*len(X):l*len(X)+  len(X)][-3],tau,stepik,X[-1])\n",
+    "    R_init[-1] = 0\n",
     "    l += 1\n",
     "#print(abs(cos[0*len(X):0*len(X)+  len(X)])**2)\n",
     "#plt.plot(X,abs(cos[49*len(X):49*len(X)+  len(X)])**2)\n",
